My First Project

--- a/resume.html
+++ b/resume.html
@@ -37,12 +37,12 @@
   <div class="container">
     <div class="header">
       <div class="left">
-        <div class="avatar">YN</div>
+        <div class="avatar">TT</div>
       </div>
       <div class="right">
-        <h1>Your Name</h1>
-        <p class="small">Job Title — City, Country</p>
-        <p class="small">Email: you@example.com | Phone: +1 555 123 4567</p>
+        <h1>Tanishque Tyagi</h1>
+        <p class="small">CSE-AI/ML Engineer — Ghaziabad, India</p>
+        <p class="small">Email: tanishque30@gmail.com | Phone: +91 9310300737</p>
       </div>
     </div>
 
@@ -50,27 +50,7 @@
 
     <section>
       <h2 style="font-size:16px; margin-bottom:6px">Profile</h2>
-      <p style="margin-top:0">A brief 1-2 sentence summary about you. Keep it short and focused on your strengths and job goal.</p>
-    </section>
-
-    <section>
-      <h2 style="font-size:16px; margin-bottom:6px">Experience</h2>
-      <div>
-        <strong>Job Title — Company Name</strong>
-        <p class="small">Month Year — Present</p>
-        <ul>
-          <li>One sentence describing what you did.</li>
-          <li>Another short achievement or responsibility.</li>
-        </ul>
-      </div>
-
-      <div>
-        <strong>Previous Job — Company</strong>
-        <p class="small">Month Year — Month Year</p>
-        <ul>
-          <li>One sentence about this role.</li>
-        </ul>
-      </div>
+      <p style="margin-top:0">Hello. My name is Tanishque and i am doing Btech in AI/ML which is future of technology</p>
     </section>
 
     <section>
@@ -78,11 +58,11 @@
       <table>
         <tr>
           <th>Degree</th>
-          <td>B.Sc. Computer Science — University Name (2013 — 2017)</td>
+          <td>B.Tech CSE-AI/Ml (2025-2029)</td>
         </tr>
         <tr>
           <th>Other</th>
-          <td>Relevant coursework or honors</td>
+          <td>Full Stack Web Development</td>
         </tr>
       </table>
     </section>
@@ -99,7 +79,7 @@
     <section>
       <h2 style="font-size:16px; margin-bottom:6px">Projects / Other</h2>
       <ul>
-        <li>Short project name — 1 line description.</li>
+        <li>Create My First  Resume </li>
       </ul>
     </section>
 
