--- a/resume.html
+++ b/resume.html
@@ -1,88 +1,140 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Simple Resume — Your Name</title>
-  <style>
-    /* Simple, beginner-friendly CSS (level 1) */
-    body{font-family: Arial, sans-serif; background:#f2f4f7; margin:0; padding:20px}
-    .container{max-width:800px; margin:0 auto; background:#fff; padding:16px; border:1px solid #ddd}
-    .header{overflow:auto}
-    .left{float:left; width:30%}
-    .right{float:right; width:68%}
-    .avatar{width:70px; height:70px; background:#007bff; color:#fff; display:flex; align-items:center; justify-content:center; font-weight:bold}
-    h1{margin:0 0 6px 0; font-size:20px}
-    p.small{margin:4px 0; color:#555}
-
-    /* contact and lists */
-    ul{padding-left:18px}
-    li{margin-bottom:6px}
-
-    /* simple table for education */
-    table{width:100%; border-collapse:collapse; margin-top:8px}
-    th, td{padding:8px; border:1px solid #eee; text-align:left}
-
-    /* clear floats */
-    .clear{clear:both}
-
-    /* responsive very simple */
-    @media (max-width:600px){
-      .left, .right{float:none; width:100%}
-      .avatar{margin-bottom:8px}
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
+<style>
+    #map{
+      width:700px;
+      height:850px;
+      margin:auto;
+      display:flex;
+      flex-wrap: wrap;
+      flex-direction: row;
+      justify-content:baseline;
+    }
+    h1{
+        font-size: 50px;
+        text-align: center;
+        margin-bottom: 0px;
+    }
+    h3{
+        font-size: 30px;
+        text-align: center;
+    }
+    .box1{
+        flex-basis:240px;
+        height:850px;
+        border-right:1px solid black;
+    }
+    .box2{
+        flex-basis:450px;
+        height:800px;
+    }
+    .nav{
+        width:230px;
+        margin:5px;
+        text-align:center;
+        background-color: skyblue;
+    }
+    .nav2{
+        width:440px;
+        margin:5px;
+        text-align:center;
+        background-color: skyblue;
+    }
+    .nav3{
+        width:230px;
+        height:fit-content;
+        text-align: left;
+        margin-top:10px;
+    }
+    img{
+        height:20px;
+        width:20px;
+        border-radius: 2px;
+    }
+    .nav4{
+        margin:10px;
+        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    }
+</style>
 <body>
-  <div class="container">
-    <div class="header">
-      <div class="left">
-        <div class="avatar">TT</div>
-      </div>
-      <div class="right">
-        <h1>Tanishque Tyagi</h1>
-        <p class="small">CSE-AI/ML Engineer — Ghaziabad, India</p>
-        <p class="small">Email: tanishque30@gmail.com | Phone: +91 9310300737</p>
-      </div>
+   <h1> <img src="/image/Self.jpg" style="width:80px; height:80px; border-radius:50%; display:inline; margin:10px">Tanishque Tyagi</h1>
+    <h3>AI/ML Engineer</h3>
+    <div id="map">
+        <div class="box1">
+            <div class="nav">CONTACT</div>
+            <diV class="nav3">
+                <strong>Address</strong>
+                <p>Sec-23,Sanjay Nagar</p>
+                <p>Ghaziabad</p>
+                <p>Pin-201001</p>
+                <p>India</p>
+                <strong>Phone</strong>
+                <p>9310300737</p>
+                <strong>Email</strong>
+                <p>tanishque30@gmail.com</p>
+            </diV>
+            <div class="nav">Social</div>
+            <div class="nav3">
+                <p>
+                <img src="https://cdn.pixabay.com/photo/2021/06/15/12/14/instagram-6338393_1280.png" alt="cruppted" style="display:inline; margin-right:5px">tanishque_tyagi</p>
+                <p><img src="https://img.freepik.com/premium-vector/linkedin-lo…g-platform-symbol_628407-1931.jpg?semt=ais_hybrid" style="display:inline; margin-right:5px" >tanishque123</p>
+                <p><img src="https://tse1.mm.bing.net/th/id/OIP.VEsGt-5QtGlmgWL03J3jAgHaGf?dpr=2&pid=ImgDetMain&o=7&rm=3"style="display:inline; margin-right:5px">Tanishque </p>
+            </div>
+            <div class="nav">CERTIFICATIONS</div>
+            <div class="nav3">
+                <strong style="display:block;">IAAP Certified</strong>
+                <strong>WEB DEVELOPER</strong>
+            </div>
+        </div>
+        <div class="box2">
+            <div class="nav2">
+            PROFESSIONAL PROFILE
+            </div>
+            <p class="nav4">Enthusiastic B.Tech student with a solid foundation in programming, analytical thinking, and technology-driven problem solving. Passionate about learning new tools, building projects, and developing real-world technical skills. A fast learner with good teamwork abilities, looking to contribute to innovative projects and gain hands-on industry experience.</p>
+           <div class="nav2">Education</div>
+           <p class="nav4">Currently pursuing Bachelor of Technology (B.Tech) in Computer Science and Engineering (Artificial Intelligence & Machine Learning) from ABES Engineering College, developing strong fundamentals in programming, data structures, machine learning, and modern computing technologies. Completed Class 12 with a science background, focusing on mathematics and computer science, and Class 10 with a solid academic base. Actively enhancing technical skills through coursework, hands-on projects, and continuous learning in AI/ML tools and technologies.</p>
+            <div class="nav2">SKILLS</div>
+           <div class="nav4">
+            <ol type="1">
+            <li>Technical Skills</li>
+            <ul>
+                <li>Web Development</li>
+                <li>Git and GIt Hub</li>
+                <li>Programming</li>
+            </ul>
+            <li>Soft Skills</li>
+            <ul>
+                <li>Communication Skill</li>
+                <li>Teamwork and collaboration</li>
+                <li>Problem Solving</li>
+            </ul>
+            <li>Analytical Skill</li>
+            <ul>
+                <li>Logical reasoning</li>
+                <li>Decision-making</li>
+                <li>Research skill</li>
+            </ul>
+            <li>Work Ethics Skills</li>
+            <ul>
+                <li>Reliability</li>
+                <li>Punctuality</li>
+                <li>Discipline</li>
+            </ul>
+            </ol>
+           </div>
+           <div class="nav2">PROJECTS</div>
+           <ol type="1">
+            <li>Personal Portfolio Website</li>
+            <li>Making own resume</li>
+            <li>Basic Calculator app</li>
+            <li>Weather Checker App</li>
+           </ol>
+        </div>
     </div>
-
-    <div class="clear"></div>
-
-    <section>
-      <h2 style="font-size:16px; margin-bottom:6px">Profile</h2>
-      <p style="margin-top:0">Hello. My name is Tanishque and i am doing Btech in AI/ML which is future of technology</p>
-    </section>
-
-    <section>
-      <h2 style="font-size:16px; margin-bottom:6px">Education</h2>
-      <table>
-        <tr>
-          <th>Degree</th>
-          <td>B.Tech CSE-AI/Ml (2025-2029)</td>
-        </tr>
-        <tr>
-          <th>Other</th>
-          <td>Full Stack Web Development</td>
-        </tr>
-      </table>
-    </section>
-
-    <section>
-      <h2 style="font-size:16px; margin-bottom:6px">Skills</h2>
-      <ul>
-        <li>HTML, CSS, basic JavaScript</li>
-        <li>Microsoft Office / Google Workspace</li>
-        <li>Teamwork, communication</li>
-      </ul>
-    </section>
-
-    <section>
-      <h2 style="font-size:16px; margin-bottom:6px">Projects / Other</h2>
-      <ul>
-        <li>Create My First  Resume </li>
-      </ul>
-    </section>
-
-  </div>
 </body>
 </html>
