Clone OF Amazon

--- a/Project_Semister1/amazon_Webpage.html
+++ b/Project_Semister1/amazon_Webpage.html
@@ -75,6 +75,12 @@
             column-gap: 15px;
             background-color: lightgreen;
         }
+        input{
+            background-image: url(https://img.freepik.com/premium-vector/magnifying-glass-icon-yellow-background_322958-1735.jpg);
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: right;
+        }
         .write{
             border:1px solid black;
             background-color: white;
