--- a/Project_Semister1/amazon_Webpage.html
+++ b/Project_Semister1/amazon_Webpage.html
@@ -43,7 +43,7 @@
             grid-template-columns: auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto ;
         }
         .nav1{
-            background-color: rgb(114, 114, 164);
+            background-color: rgb(114, 114, 164 , 0.5);
             color:white;
             padding:5px 3px 2px 4px;
         }
