--- a/Project_Semister1/amazon_Webpage.html
+++ b/Project_Semister1/amazon_Webpage.html
@@ -21,7 +21,7 @@
             font-size: 5px;
         }
         #logo{
-            width:30px;
+            width:100%;
             height:20px;
             margin:auto auto;
         }
@@ -61,11 +61,22 @@
         #body1{
             grid-column-start:1;
             grid-column-end:3;
+            height:350px;
         }
-        div#body1 img{
+        .body{
+            position:relative;
+            width:100%;
+            height:100%;
+            overflow: hidden;
+        }
+        .slide{
+            position:absolute;
             height:350px;
             width:100%;
-            margin: auto;
+        }
+        .slide:nth-child(2):hover{
+            transform: translateX(-100%);
+            transition: 2s;
         }
         #box{
             display:grid;
@@ -133,7 +144,10 @@
         <section class="nav1 nav2"><img src="/image/logo.png" alt="cruppted" style="width:250px; height:25px; background-color: darkblue; border-radius:5px;"></section>
       </div>
       <div id="body1">
-        <img src="	https://cdn.beebom.com/content/2025/09/Amazon-Great-Indian-Festival-Sale-2025.jpg" alt="cruppted">
+        <div class="body">
+            <img src="	https://cdn.grabon.in/gograbon/images/web-images/uploads/1727176405213.jpg" alt="" class="slide">
+        <img src="	https://cdn.beebom.com/content/2025/09/Amazon-Great-Indian-Festival-Sale-2025.jpg" alt="cruppted" class="slide">
+        </div>
       </div>
       <div id="box">
         <section class="write"><h4>Revamp Your home in style</h4>
