--- a/Project_Semister1/amazon_Webpage.html
+++ b/Project_Semister1/amazon_Webpage.html
@@ -10,6 +10,9 @@
             grid-template-columns: auto auto;
             gap:0px;
         }
+        .nav1:hover{
+            cursor: pointer;
+        }
         #header{
             display:grid;
             grid-column-start: 1;
