--- a/Project_Semister1/amazon_Webpage.html
+++ b/Project_Semister1/amazon_Webpage.html
@@ -68,13 +68,15 @@
         }
         .body{
             position:relative;
+            margin-top: 5px;
+            margin-bottom: 10px;
             width:100%;
             height:100%;
             overflow: hidden;
         }
         .slide{
             position:absolute;
-            height:350px;
+            height:340px;
             width:100%;
         }
         .slide:nth-child(2):hover{
