--- a/Project_Semister1/amazon_Webpage.html
+++ b/Project_Semister1/amazon_Webpage.html
@@ -30,7 +30,7 @@
         }
         .location{
             width:10px;
-            display:inline;
+            display:inline-block;
         }
         p{
             display:inline;
@@ -47,12 +47,13 @@
         }
         .nav1{
             background-color: rgb(114, 114, 164 , 0.5);
-            color:white;
-            padding:5px 3px 2px 4px;
+            color:black;
+            padding:3px 3px 2px 3px;
         }
         .nav1:hover{
             border:1px solid white;
             background-color: black;
+            color:white;
             text-decoration: underline;          
             border-radius: 5px;
         }
@@ -89,7 +90,7 @@
             grid-column-end: 3;
             grid-template-columns: auto auto auto auto;
             column-gap: 15px;
-            background-color: lightgreen;
+            /* background-color: lightgreen; */
         }
         input{
             background-image: url(https://img.freepik.com/premium-vector/magnifying-glass-icon-yellow-background_322958-1735.jpg);
@@ -134,18 +135,18 @@
         <section class="padd"><img src="https://image.shutterstock.com/image-illustration/…ping-trolley-cart-icon-black-260nw-1007492344.jpg" alt="" class="location"><p>Cart</p></section>
       </div>
       <div id="nav">
-        <section class="nav1"><img src="	https://www.shutterstock.com/image-vector/hamburger-menu-web-icon-white-260nw-1249309132.jpg" alt="" class="location"><p>All</p></section>
-        <section class="nav1"><p>fresh</p></section>
-        <section class="nav1"><p>Mx player</p></section>
-        <section class="nav1"><p>Sell</p></section>
-        <section class="nav1"><p>Best Seller</p></section>
-        <section class="nav1"><p>Mobiles</p></section>
-        <section class="nav1"><p>Today's Delas</p></section>
-        <section class="nav1"><p>Customer Service</p></section>
-        <section class="nav1"><p>Prime</p></section>
-        <section class="nav1"><p>Amazon Pay</p></section>
-        <section class="nav1"><p>New Release</p></section>
-        <section class="nav1"><p>Electronic</p></section>
+        <section class="nav1"><img src="	https://www.shutterstock.com/image-vector/hamburger-menu-web-icon-white-260nw-1249309132.jpg" alt="" class="location"><h4 style="display:inline-block;">All</h4></section>
+        <section class="nav1"><h4>fresh</h4></section>
+        <section class="nav1"><h4>Mx player</h4></section>
+        <section class="nav1"><h4>Sell</h4></section>
+        <section class="nav1"><h4>Best Seller</h4></section>
+        <section class="nav1"><h4>Mobiles</h4></section>
+        <section class="nav1"><h4>Today's Delas</h4></section>
+        <section class="nav1"><h4>Customer Service</h4></section>
+        <section class="nav1"><h4>Prime</h4></section>
+        <section class="nav1"><h4>Amazon Pay</h4></section>
+        <section class="nav1"><h4>New Release</h4></section>
+        <section class="nav1"><h4>Electronic</h4></section>
         <section class="nav1 nav2"><img src="/image/logo.png" alt="cruppted" style="width:250px; height:25px; background-color: darkblue; border-radius:5px;"></section>
       </div>
       <div id="body1">
