--- a/Project_Semister1/amazon_Webpage.html
+++ b/Project_Semister1/amazon_Webpage.html
@@ -48,6 +48,7 @@
         .nav1{
             background-color: rgb(114, 114, 164 , 0.5);
             color:black;
+            /* border:1px solid black; */
             padding:3px 3px 2px 3px;
         }
         .nav1:hover{
