--- a/Project_Semister1/amazon_Webpage.html
+++ b/Project_Semister1/amazon_Webpage.html
@@ -147,6 +147,10 @@
                border-bottom: 1px solid white;
                border-radius: 5px;
         }
+        a{
+            color:white;
+            border-bottom: 0px;
+        }
     </style>
 </head>
 <body>
@@ -198,7 +202,7 @@
     <p>Cleaning Accesories </p><p>Bathroom Accesories </p></section>
       </div>
       <div id="footer">
-        <span>Back To Top</span>
+        <span><button style="background-color: #232F3E;"><a href="#header">Back To Top</a></button></span>
          <section class="in"><h3>Get to Known Us</h3>About Amazon<br>Career<br>Press Release<br>Amazon Science</section>
          <section class="in"><h3>Connect with Us</h3>Facebook<br>Twiiter<br>Instagram</section>
          <section class="in"><h3>Make Money with us</h3>Sell on Amazon<br>Sell under Amazon Accelerator <br>Protect and Build your Brand<br>Amazon Global Selling <br> Supply to Amazon <br>Beome a Affiliate<br>Fulfilment By Amazon<br>Advertise Your Product<br>Amazon Pay on Merchants</section>
